fix: full width hero section on mobile devices

--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -7,6 +7,10 @@
 
     max-width: 65%;
 
+    @media (max-width: 768px) {
+        max-width: 100%;
+    }
+
     .btn {
         margin-left: 0;
     }
